[package]
name = "track-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
lazy_static = "1.4.0"
